#ifndef GPU_DEVICE_H
#define GPU_DEVICE_H

#include "gpu_buffer.h"
#include "gpu_shader.h"
#include "gpu_adapter.h"
#include "gpu_texture.h"
#include "gpu_shader_program.h"
#include "gpu_pipeline_state.h"

namespace Quack {
class GPUDevice {
public:
    virtual ~GPUDevice() = default;

public:
    virtual const GPUBuffer * CreateBuffer(const GPUBufferDescription &) const = 0;
    virtual const GPUTexture * CreateTexture(const GPUTextureDescription &) const = 0;
    virtual const GPUShader * CreateShader(const GPUShaderDescription &) const = 0;
    virtual const GPUShaderProgram * CreateShaderProgram(const GPUShaderProgramDescription &) = 0;
    virtual const GPUPipelineState * CreatePipelineState(const GPUPipelineStateDesctiption &) = 0;

public:
    virtual const GPUAdapter * GetAdapter() const = 0;
};
}

#endif