#ifndef _GPU_PIPELINE_STATE_
#define _GPU_PIPELINE_STATE_

#include "gpu_pipeline_state_description.h"

namespace Quack {
class GPUPipelineState {
public:
    GPUPipelineState() {}

public:

};
}

#endif