enum class GPUResourceUsage {
    Default,
    Dynamic
};