#ifndef _GPU_TEXTURE_DESCRIPTION_
#define _GPU_TEXTURE_DESCRIPTION_

namespace Quack {
struct GPUTextureDescription {

};
}

#endif